# QLDPC

./: .gitignore  IMPROVEMENTS_SUMMARY.md  LICENSE  README.md  poster_abstract.md  pyproject.toml  requirements.txt  setup.py
arxiv_submission/: main.bib  main.tex
docs/: performance.md
examples/: bootstrap_threshold_ci.py  compare_runs.py  find_valid_sizes.py  finite_size_scaling_analysis.py  fss_mixed_channel.py  plot_fss_mixed.py  plot_results.py  plot_supplementary.py  run_all_extended_sweeps.py  run_simulation.py  seq_mixed_sweep.py  sweep_mixed_channel.py  sweep_scaling.py  sweep_surface_baseline.py  sweep_surface_baseline_erasure_aware.py  sweep_threshold_dense.py
paper/: main.aux  main.out  main.tex
results/: README.md  baseline_surface_20251225T083926Z_toric_mwpm_lowp.csv  baseline_surface_20251225T083926Z_toric_mwpm_lowp.json  baseline_surface_20260115T062510Z_surface_mwpm.csv  baseline_surface_20260115T062510Z_surface_mwpm.json  baseline_surface_20260318T172201Z_erasure_aware_50k.csv  baseline_surface_20260318T172201Z_erasure_aware_50k.json  baseline_surface_20260319T012907Z_erasure_aware_200k_fixed.csv  baseline_surface_20260319T012907Z_erasure_aware_200k_fixed.json  scaling_20251224T165936Z.csv  scaling_20251224T165936Z.json  scaling_20251224T171422Z_adaptive_010.csv  scaling_20251224T171422Z_adaptive_010.json  scaling_20251225T032415Z_adaptive_big.csv  scaling_20251225T032415Z_adaptive_big.json  scaling_20260115T001322Z.csv  scaling_20260115T001322Z.json  scaling_20260115T064157Z_extended.csv  scaling_20260115T064157Z_extended.json  (+2 more)
(+21 files in other folders)
